# drf_DNS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
catalog/: models.py  paginations.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
orders/: models.py  serializers.py  signals.py  urls.py  utils.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_status.py
reviews/: models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
templates/: home.html
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
